bug fix on ubuntu